Give some tips to create logit_lens

--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -28,7 +28,7 @@
         "\n",
         "Read : https://www.lesswrong.com/posts/AcKRB8wDpdaN6v6ru/interpreting-gpt-the-logit-lens\n",
         "\n",
-        "Then try to reimplement it in a minimal way.\n",
+        "Then try to reimplement it in a minimal way by reproducing the figure at the end of this section.\n",
         "\n",
         "\n",
         "Resources:\n",
@@ -68,7 +68,11 @@
         "    return torch.as_tensor(toks).view(1, -1)\n",
         "\n",
         "\n",
-        "input_ids = text_to_input_ids(\"Happy birthday to You, happy\")"
+        "input_ids = text_to_input_ids(\"Happy birthday to You, happy\")\n",
+        "\n",
+        "# Tip: Use torch hooks, and do not forget the last layerNorm layer!\n",
+        "# Hooks documentation: https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks\n",
+        "# Example of usage of hooks here: https://github.com/EffiSciencesResearch/ML4G/blob/main/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb"
       ]
     },
     {
