update pytorch to numpy

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -10,12 +10,11 @@
         "\n",
         "In this notebook, we will be gradually moving up in the abstraction ladder:\n",
         "- 1. Bare Numpy (You need to compute the gradient by hand)\n",
-        "- 2. Bare Pytorch (You still need to compute the gradient by hand)\n",
-        "- 3. Autograd (Here you do not need to compute the gradient by hand anymore)\n",
-        "- 4. torch.nn (Using the nn Abstraction in pytorch)\n",
-        "- 5. Optimizer Abstraction (Finally, we don't even need to iterate on the parameters to update them)\n",
+        "- 2. Autograd (Here you do not need to compute the gradient by hand anymore)\n",
+        "- 3. torch.nn (Using the nn Abstraction in pytorch)\n",
+        "- 4. Optimizer Abstraction (Finally, we don't even need to iterate on the parameters to update them)\n",
         "\n",
-        "Si vous avez des difficultés, aidez vous de la solution: https://pytorch.org/tutorials/beginner/pytorch_with_examples.html\n",
+        "Here is the solution if you have some difficulties: https://pytorch.org/tutorials/beginner/pytorch_with_examples.html\n",
         "\n",
         "## Tensors\n",
         "### Warm-up: numpy\n",
@@ -83,7 +82,7 @@
         "c = np.random.randn()\n",
         "d = np.random.randn()\n",
         "\n",
-        "learning_rate = 1e-6\n",
+        "learning_rate = 1e-3\n",
         "epochs = 2000\n",
         "for t in range(epochs):\n",
         "    # Forward pass: compute predicted y\n",
@@ -102,10 +101,10 @@
         "    grad_d = ...\n",
         "\n",
         "    # Update weights\n",
-        "    a = ...\n",
-        "    b = ...\n",
-        "    c = ...\n",
-        "    d = ...\n",
+        "    a -= ...\n",
+        "    b -= ...\n",
+        "    c -= ...\n",
+        "    d -= ...\n",
         "\n",
         "print(f'Result: y = {a} + {b} x + {c} x^2 + {d} x^3')"
       ]
@@ -116,7 +115,7 @@
         "id": "xg5fRGsu3sAY"
       },
       "source": [
-        "Interpreter les resultats. Si les resultats sont corrects, passer à l'exercice suivant."
+        "Interpret the results. If the results are correct, move on to the next exercise."
       ]
     },
     {
@@ -141,103 +140,7 @@
         "id": "bNPdCt1p3sAg"
       },
       "source": [
-        "Vous pouvez checker la pytorch cheat cheet pour se remettre dans le bain : https://pytorch.org/tutorials/beginner/ptcheat.html"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "5BctrCr43sAj",
-        "outputId": "efb5ba0b-761f-4634-8d8c-885c11017048"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "99 None\n",
-            "199 None\n",
-            "299 None\n",
-            "399 None\n",
-            "499 None\n",
-            "599 None\n",
-            "699 None\n",
-            "799 None\n",
-            "899 None\n",
-            "999 None\n",
-            "1099 None\n",
-            "1199 None\n",
-            "1299 None\n",
-            "1399 None\n",
-            "1499 None\n",
-            "1599 None\n",
-            "1699 None\n",
-            "1799 None\n",
-            "1899 None\n",
-            "1999 None\n",
-            "Result: y = 1.6727429628372192 + 0.6945167779922485 x + -1.2343100309371948 x^2 + 0.4095388352870941 x^3\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/raph/opt/anaconda3/envs/mlab/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Tip: In this cell, the code should look like almost exactly like in the previous cell in numpy.\n",
-        "# We only want to use the low-levels functionalities of PyTorch.\n",
-        "\n",
-        "import torch\n",
-        "import math\n",
-        "\n",
-        "dtype = torch.float\n",
-        "device = torch.device(\"cpu\")\n",
-        "# device = torch.device(\"cuda:0\")  # Uncomment this to run on GPU\n",
-        "\n",
-        "# Create Tensors to hold input and outputs.\n",
-        "# By default, requires_grad=False, which indicates that we do not need to\n",
-        "# compute gradients with respect to these Tensors during the backward pass.\n",
-        "x = torch.linspace(-math.pi, math.pi, 2000, device=device, dtype=dtype)\n",
-        "y = torch.sin(x)\n",
-        "\n",
-        "# Create random Tensors for weights. For a third order polynomial, we need\n",
-        "# 4 weights: y = a + b x + c x^2 + d x^3\n",
-        "# Setting requires_grad=True indicates that we want to compute gradients with\n",
-        "# respect to these Tensors during the backward pass.\n",
-        "a = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
-        "b = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
-        "c = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
-        "d = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
-        "\n",
-        "learning_rate = 1e-6\n",
-        "for t in range(epochs):\n",
-        "    # Forward pass: compute predicted y  (same as above)\n",
-        "    y_pred = ...\n",
-        "\n",
-        "    # Compute and print loss (same as above)\n",
-        "    loss = ...\n",
-        "    if t % 100 == 99:\n",
-        "        print(t, loss)\n",
-        "\n",
-        "    # Backprop to compute gradients of a, b, c, d with respect to loss  (same as above)\n",
-        "    grad_a = ...\n",
-        "    grad_b = ...\n",
-        "    grad_c = ...\n",
-        "    grad_d = ...\n",
-        "\n",
-        "    # Update weights (same as above)\n",
-        "    a = ...\n",
-        "    b = ...\n",
-        "    c = ...\n",
-        "    d = ...\n",
-        "\n",
-        "\n",
-        "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')"
+        "You can check the pytorch cheat sheet to get back into the swing of things: https://pytorch.org/tutorials/beginner/ptcheat.html"
       ]
     },
     {
@@ -297,7 +200,7 @@
         "c = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
         "d = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
         "\n",
-        "learning_rate = 1e-6\n",
+        "learning_rate = 1e-3\n",
         "for t in range(epochs):\n",
         "    # Forward pass: compute predicted y using operations on Tensors. (same as above)\n",
         "    y_pred = ...\n",
@@ -319,10 +222,10 @@
         "    # because weights have requires_grad=True, but we don't need to track this\n",
         "    # in autograd.\n",
         "    with torch.no_grad():\n",
-        "        a = ...\n",
-        "        b = ...\n",
-        "        c = ...\n",
-        "        d = ...\n",
+        "        a -= ...\n",
+        "        b -= ...\n",
+        "        c -= ...\n",
+        "        d -= ...\n",
         "\n",
         "        # Manually zero the gradients after updating weights\n",
         "        a.grad = ...\n",
@@ -423,9 +326,9 @@
         "\n",
         "# The nn package also contains definitions of popular loss functions; in this\n",
         "# case we will use Mean Squared Error (MSE) as our loss function.\n",
-        "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
+        "loss_fn = torch.nn.MSELoss(reduction='mean')\n",
         "\n",
-        "learning_rate = 1e-6\n",
+        "learning_rate = 1e-3\n",
         "for t in range(epochs):\n",
         "\n",
         "    # Forward pass: compute predicted y by passing x to the model. Module objects\n",
@@ -454,7 +357,7 @@
         "    # we can access its gradients like we did before.\n",
         "    with torch.no_grad():\n",
         "        for param in model.parameters():\n",
-        "            param = ...\n",
+        "            param -= ...\n",
         "\n",
         "# You can access the first layer of `model` like accessing the first item of a list\n",
         "linear_layer = model[0]\n",
@@ -502,11 +405,8 @@
       "name": "Copie de pytorch_tuto.ipynb",
       "provenance": []
     },
-    "interpreter": {
-      "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
-    },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('mlab')",
+      "display_name": "Python 3.9.13 ('ML4G')",
       "language": "python",
       "name": "python3"
     },
@@ -520,9 +420,14 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.9.13"
     },
-    "orig_nbformat": 4
+    "orig_nbformat": 4,
+    "vscode": {
+      "interpreter": {
+        "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
