--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -88,6 +88,9 @@
         "- Encoder-Decoder Attention: values and keys come from encoder (b, i, e), queries comes from decoder (b, o, e)\n",
         "- Decoder Masked Attention: values, keys and queries come from the output sequence (b, o, e)\n",
         "\n",
+        "For every type of attention, the output of the self attention has the same size as the pre_query.\n",
+        "You can think of the self attention as just a function eating queries and outputing \"shuffled\" queries along the seq_len axis.\n",
+        "\n",
         "We will create a SelfAttention Module that will be usable by those 3 types of attentions.\n",
         "\n",
         "**Question**: \n",
@@ -146,7 +149,7 @@
         "\n",
         "        # Attention weights of the different heads are stored in the same tensors.\n",
         "\n",
-        "        # We put all the attention heads in the same Linears Layers:\n",
+        "        # WARNING: We put all the attention heads in the same Linears Layers:\n",
         "        self.values = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
         "        self.keys = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
         "        self.queries = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
@@ -155,25 +158,29 @@
         "        self.fc_out = nn.Linear(self.embed_size, embed_size)\n",
         "\n",
         "\n",
-        "    def forward(self, values, keys, queries, mask):\n",
+        "    def forward(self, pre_values, pre_keys, pre_queries, mask):\n",
         "        \"\"\"\n",
-        "        values: (N, value_len, embed_size)\n",
-        "        keys: (N, keys_len, embed_size)\n",
+        "        pre_values: (N, value_len, embed_size)\n",
+        "        pre_keys: (N, keys_len, embed_size)\n",
         "        queries: (N, queries_len, embed_size)\n",
+        "\n",
+        "\n",
         "\n",
         "        mask: None or (N, heads, query_len, key_len) \n",
         "        if mask == 0, attention matrix  -> float(\"-1e20\") (big negative value)\n",
         "        Ignore the mask, it's too difficult at the beginning.\n",
         "        \"\"\"\n",
         "        # Get number of training examples\n",
-        "        N = queries.shape[0]\n",
+        "        N = pre_queries.shape[0]\n",
         "\n",
-        "        value_len, key_len, query_len = values.shape[1], keys.shape[1], queries.shape[1]\n",
+        "        value_len, key_len, query_len = pre_values.shape[1], pre_keys.shape[1], pre_queries.shape[1]\n",
         "\n",
         "        # Compute the values keys and queries\n",
-        "        values = self.values(values)  # (N, value_len, embed_size)\n",
-        "        keys = self.keys(keys)  # (N, key_len, embed_size)\n",
-        "        queries = self.queries(queries)  # (N, query_len, embed_size)\n",
+        "        values = self.values(pre_values)  # (N, value_len, embed_size)\n",
+        "        keys = self.keys(pre_keys)  # (N, key_len, embed_size)\n",
+        "        queries = self.queries(pre_queries)  # (N, query_len, embed_size)\n",
+        "        # WARNING: values (resp. keys and queries), are then used by different heads. \n",
+        "        # Each head uses a fraction of the values (resp. keys and queries) tensor.\n",
         "\n",
         "        # Split the embedding into self.heads different pieces\n",
         "        values = values.reshape(N, value_len, self.heads, self.head_dim)\n",
@@ -213,22 +220,30 @@
         "        # (N, query_len, embed_size)\n",
         "        return self.fc_out(out)\n",
         "    \n",
-        "    def forward2(self, values, keys, queries, mask):\n",
+        "    def forward2(self, pre_values, pre_keys, pre_queries, mask):\n",
         "        \"\"\"\n",
-        "        values: (N, value_len, embed_size)\n",
-        "        keys: (N, keys_len, embed_size)\n",
+        "        pre_values: (N, value_len, embed_size)\n",
+        "        pre_keys: (N, keys_len, embed_size)\n",
         "        queries: (N, queries_len, embed_size)\n",
         "\n",
         "        mask: None or (N, heads, query_len, key_len) \n",
         "        if mask == 0, attention matrix  -> float(\"-1e20\") (big negative value)\n",
         "        Ignore the mask, it's too difficult at the beginning.\n",
         "        \"\"\"\n",
-        "        N = queries.shape[0]\n",
+        "        # Get number of training examples\n",
+        "        N = pre_queries.shape[0]\n",
         "\n",
-        "        value_len, key_len, query_len = values.shape[1], keys.shape[1], queries.shape[1]\n",
+        "        value_len, key_len, query_len = pre_values.shape[1], pre_keys.shape[1], pre_queries.shape[1]\n",
         "\n",
         "        # Compute the values keys and queries\n",
-        "        values = self.values(values)\n",
+        "        values = self.values(pre_values)  # (N, value_len, embed_size)\n",
+        "        keys = self.keys(pre_keys)  # (N, key_len, embed_size)\n",
+        "        queries = self.queries(pre_queries)  # (N, query_len, embed_size)\n",
+        "        # WARNING: values (resp. keys and queries), are then used by different heads. \n",
+        "        # Each head uses a fraction of the values (resp. keys and queries) tensor.\n",
+        "\n",
+        "        # Compute the values keys and queries\n",
+        "        values = self.values(pre_values)\n",
         "        ...\n",
         "        ...\n",
         "\n",
@@ -800,11 +815,8 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
-    },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('mlab')",
+      "display_name": "Python 3.9.13 ('ML4G')",
       "language": "python",
       "name": "python3"
     },
@@ -819,6 +831,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+      }
     }
   },
   "nbformat": 4,
