Lighter search engine

--- a/days/w1d4/Search_Engine.ipynb
+++ b/days/w1d4/Search_Engine.ipynb
@@ -523,7 +523,7 @@
       "source": [
         "Use GPT-J 6b with some prompt engineering to create tldr of the summaries\n",
         "\n",
-        "You can begin with: https://huggingface.co/EleutherAI/gpt-neo-1.3B\n",
+        "You can begin with: https://huggingface.co/gpt2\n",
         "\n",
         "\n",
         "The first step is to create a single tldr. For that, you will use some  few-shot learning. You can use this link to create your prompt: https://github.com/EffiSciencesResearch/ML4G/blob/38f80110be0802837254c1cd888f387475c9b5fe/days/w1d4/tldr_dataset.csv\n",
@@ -549,12 +549,12 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-        "\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"EleutherAI/gpt-neo-1.3B\")\n",
-        "model = AutoModelForCausalLM.from_pretrained(\"EleutherAI/gpt-neo-1.3B\")\n"
+        "from transformers import GPT2Tokenizer, GPT2Model\n",
+        "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
+        "model = GPT2Model.from_pretrained('gpt2')\n",
+        "text = \"Replace me by any text you'd like.\"\n",
+        "encoded_input = tokenizer(text, return_tensors='pt')\n",
+        "output = model(**encoded_input)"
       ]
     },
     {
