interpretation easy gradCam

--- a/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
@@ -1076,7 +1076,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The grad cams work well except for the last image. Indeed, in RGB coding, green is a combination of yellow and blue. Since the gradcam effect is additive, it is not surprising to see the pixels of the other composite colors activate."
+        "Interpretation ?"
       ]
     },
     {
