--- a/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -375,16 +375,15 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "<torch.utils.hooks.RemovableHandle at 0x7fd7e323df28>"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {
-            "tags": []
-          },
-          "output_type": "execute_result"
+          "ename": "NameError",
+          "evalue": "name 'vqa_resnet' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m vqa_resnet\u001b[39m.\u001b[39mresnet_layer4\u001b[39m.\u001b[39mr_model\u001b[39m.\u001b[39mlayer4[\u001b[39m2\u001b[39m]\u001b[39m.\u001b[39mconv3\u001b[39m.\u001b[39mregister_forward_hook(forward_hook)\n\u001b[1;32m      2\u001b[0m vqa_resnet\u001b[39m.\u001b[39mresnet_layer4\u001b[39m.\u001b[39mr_model\u001b[39m.\u001b[39mlayer4[\u001b[39m2\u001b[39m]\u001b[39m.\u001b[39mconv3\u001b[39m.\u001b[39mregister_backward_hook(backward_hook)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'vqa_resnet' is not defined"
+          ]
         }
       ],
       "source": [
@@ -660,7 +659,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.13 ('ML4G')",
       "language": "python",
       "name": "python3"
     },
@@ -674,7 +673,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.1"
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+      }
     }
   },
   "nbformat": 4,
