--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -28,6 +28,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install torchtyping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.distributions.categorical import Categorical\n",
@@ -35,6 +44,11 @@
     "import numpy as np\n",
     "import gym\n",
     "from gym.spaces import Discrete, Box\n",
+    "\n",
+    "from torchtyping import TensorType, patch_typeguard\n",
+    "from typeguard import typechecked\n",
+    "\n",
+    "patch_typeguard()  # use before @typechecked\n",
     "\n",
     "\n",
     "def mlp(sizes, activation=nn.Tanh, output_activation=nn.Identity):\n",
