--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -193,10 +193,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.13 ('ML4G')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
