Add to be types to vanilla policy gradient

--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -79,6 +79,7 @@
     "\n",
     "    # make function to compute action distribution\n",
     "    # What is the shape of obs?\n",
+    "    @typechecked # To be typed\n",
     "    def get_policy(obs):\n",
     "        # Warning: obs has not always the same shape.\n",
     "        logits = logits_net(obs)\n",
@@ -86,12 +87,14 @@
     "\n",
     "    # make action selection function (outputs int actions, sampled from policy)\n",
     "    # What is the shape of obs?\n",
+    "    @typechecked # To be typed\n",
     "    def get_action(obs):\n",
     "        return get_policy(obs).sample().item()\n",
     "\n",
     "    # make loss function whose gradient, for the right data, is policy gradient\n",
     "    # What does the weights parameter represents here?\n",
     "    # What is the shape of obs?\n",
+    "    @typechecked # To be typed\n",
     "    def compute_loss(obs, act, weights):\n",
     "        logp = get_policy(obs).log_prob(act)\n",
     "        return -(logp * weights).mean()\n",
