Add comments to pytorch tuto

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -89,12 +89,15 @@
         "    # y = a + b x + c x^2 + d x^3\n",
         "    y_pred = ...\n",
         "\n",
-        "    # Compute and print loss (Mean squared Error)\n",
+        "    # (Optional) Compute and print loss (Mean squared Error)\n",
+        "    # Computing the loss is not necessary in numpy\n",
+        "    # But it will be necessary in Pytorch\n",
         "    loss = ...\n",
         "    if t % 100 == 99:\n",
         "        print(t, loss)\n",
         "\n",
         "    # compute the gradients of the loss wrt a, b, c, d\n",
+        "    # Warning: y_pred is a vector, and grad_a should be the mean gradient of each component of y_pred.\n",
         "    grad_a = ...\n",
         "    grad_b = ...\n",
         "    grad_c = ...\n",
@@ -115,7 +118,11 @@
         "id": "xg5fRGsu3sAY"
       },
       "source": [
-        "Interpret the results. If the results are correct, move on to the next exercise."
+        "Interpret the results. If the results are correct, move on to the next exercise.\n",
+        "\n",
+        "Note: \n",
+        "- in the correction, they use a learning_rate = 1e-6 and then sum the gradients.\n",
+        "- Here we use a learning_rate = 1e-3 and then average the gradients.\n"
       ]
     },
     {
@@ -228,6 +235,7 @@
         "        d -= ...\n",
         "\n",
         "        # Manually zero the gradients after updating weights\n",
+        "        # You can assign None or torch.zeros_like(a)\n",
         "        a.grad = ...\n",
         "        b.grad = ...\n",
         "        c.grad = ...\n",
@@ -320,8 +328,11 @@
         "# The Flatten layer flatens the output of the linear layer to a 1D tensor,\n",
         "# to match the shape of `y`.\n",
         "model = torch.nn.Sequential(\n",
+        "    # Important note: Linear contains a matrix that is always applied to the last dimension of a tensor.\n",
         "    torch.nn.Linear(3, 1),\n",
-        "    torch.nn.Flatten(0, 1)\n",
+        "    # Note: Flatten default arguments are Flatten(start_dim = 1, end_dim = -1)\n",
+        "    # By default, start_dim = 1 because 0 corresponds to the batch dimension.\n",
+        "    torch.nn.Flatten(start_dim=0, end_dim=1)\n",
         ")\n",
         "\n",
         "# The nn package also contains definitions of popular loss functions; in this\n",
@@ -389,6 +400,7 @@
       "outputs": [],
       "source": [
         "# Adapt the Above code to use torch.optim.SGD\n",
+        "# You can read back the quick start https://pytorch.org/tutorials/beginner/basics/intro.html\n",
         "..."
       ]
     },
