--- a/days/w1d2/hyperparameters/TP1_Ex1_Binary_classification.ipynb
+++ b/days/w1d2/hyperparameters/TP1_Ex1_Binary_classification.ipynb
@@ -461,6 +461,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Preliminaries\n",
+    "\n",
+    "WARNING: For this exercise to be maximally useful, before you start answering the questions, try to make predictions about the impact of each meta-parameter.\n",
+    "Afterwards, you can check that the predictions were correct.\n",
+    "\n",
+    "\n",
+    "- Meta optimization: The goal of this tutorial is to get a summary table of the impact of each meta-parameter by clicking once on the \"Run All\" button.\n",
+    "To do this, you need to think about the difference between the grid search strategy and the sensitivity analysis strategy? Which strategy is more suitable in case there are a lot of meta parameters? Try to implement this strategy in the following.\n",
+    "- Why do you need the test dataset in addition to the validation dataset?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise 1: Impact of the architecture of the model\n",
     "\n",
     "The class `Model` is the definition of your model. You can now modify it to try out different architectures and\n",
@@ -522,11 +537,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('mlab')",
+   "display_name": "Python 3.9.13 ('ML4G')",
    "language": "python",
    "name": "python3"
   },
@@ -541,6 +553,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+   }
   }
  },
  "nbformat": 4,
