--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -83,15 +83,25 @@
         "- o: sequence len out\n",
         "- e: embedding dimension\n",
         "\n",
-        "There are 3 types of attention mecanisms in \"Attention is all you need\":\n",
+        "There are 3 types of attention mechanisms in \"Attention is all you need\":\n",
         "- Encoder Attention: values, keys and queries are of shape (b, i, e)\n",
         "- Encoder-Decoder Attention: values and keys come from encoder (b, i, e), queries comes from decoder (b, o, e)\n",
         "- Decoder Masked Attention: values, keys and queries come from the output sequence (b, o, e)\n",
         "\n",
         "For every type of attention, the output of the self attention has the same size as the pre_query.\n",
-        "You can think of the self attention as just a function eating queries and outputing \"shuffled\" queries along the seq_len axis.\n",
+        "You can think of the self attention as just a function eating queries and outputting \"shuffled\" queries along the seq_len axis.\n",
         "\n",
         "We will create a SelfAttention Module that will be usable by those 3 types of attentions.\n",
+        "\n",
+        "\n",
+        "**The one-liner summary of the self attention mechanism is:**\n",
+        "\n",
+        "                keys, values ↴\n",
+        "queries (b, o, e) --> SelfAttention --> queries (b, o, e) \n",
+        "\n",
+        "queries after the self-attention:\n",
+        "- has same shape as queries\n",
+        "- Is homogeneous to values (each of its column contains a linear combination of values of different tokens).\n",
         "\n",
         "**Question**: \n",
         "- Meditate on the meanings of values, keys and queries.\n",
@@ -103,7 +113,7 @@
         "- What happens to the attention in the encoder, in the decoder, in the encoder-decoder attention?\n",
         "- In the SelfAttention class, self.values = nn.Linear(self.embed_size, self.embed_size, bias=False) : ie, all heads attentions are stored in the same matrix.\n",
         "  - What would you do if there was only one head attention?\n",
-        "- use einops (https://github.com/arogozhnikov/einops) instead of pytorch operations.\n",
+        "- use einops (https://github.com/arogozhnikov/einops) instead of PyTorch operations.\n",
         "- meditate on the sequence of information transfers for each dimension."
       ]
     },
@@ -170,6 +180,8 @@
         "        if mask == 0, attention matrix  -> float(\"-1e20\") (big negative value)\n",
         "        Ignore the mask, it's too difficult at the beginning.\n",
         "        \"\"\"\n",
+        "        assert pre_values.shape == pre_keys.shape\n",
+        "\n",
         "        # Get number of training examples\n",
         "        N = pre_queries.shape[0]\n",
         "\n",
@@ -230,6 +242,8 @@
         "        if mask == 0, attention matrix  -> float(\"-1e20\") (big negative value)\n",
         "        Ignore the mask, it's too difficult at the beginning.\n",
         "        \"\"\"\n",
+        "        assert pre_values.shape == pre_keys.shape\n",
+        "\n",
         "        # Get number of training examples\n",
         "        N = pre_queries.shape[0]\n",
         "\n",
@@ -392,7 +406,7 @@
         "id": "wTfkv47zeFsk"
       },
       "source": [
-        "In the paper attention is all you need, the position embedding  ses sines. We won't implement this part: let the neural network learn the position embedding by itself.\n",
+        "In the paper attention is all you need, the position embedding uses sines. We won't implement this part: Nowadays, let the neural network learn the position embedding by itself.\n",
         "\n",
         "**Tip**: Use torch.expand(*target_dim) to broadcast with repetitions.\n",
         "\n",
@@ -558,7 +572,11 @@
         "id": "o7E5kcu2eFso"
       },
       "source": [
-        "**Tip**: Do not use softmax, the Net should return logits. It's a convention."
+        "**Tip**: Do not use softmax, the Net should return logits. It's a convention.\n",
+        "\n",
+        "Masking:\n",
+        "- src_mask: used to implement padding.\n",
+        "- trg_mask: used to implement the teacher forcing during training."
       ]
     },
     {
@@ -790,12 +808,24 @@
         "- Generate a dataset of tokens. Train a transformer which reverse the order of the tokens.\n",
         "- Why do we add the embedding instead of concatenating them?\n",
         "- How does transformer complexity vary with sequence length?\n",
-        "- Why bias=False in the self attention layer?\n",
         "- What would happen if you train the attention architecture with sequence of len of 512, and then try to use it with sequences of 1000 tokens?\n",
         "- type the code with https://github.com/patrick-kidger/torchtyping \n",
         "\n",
         "\n",
         "inspired from : https://github.com/aladdinpersson/Machine-Learning-Collection/blob/master/ML/Pytorch/more_advanced/transformer_from_scratch/transformer_from_scratch.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## (Bonus) Training : reverse the sentences\n",
+        "\n",
+        "Try to train a transformer that translates verlan.\n",
+        "\n",
+        "- create a dataset of sentences of length 10 composed of random tokens\n",
+        "- train the transformer to reverse the order of the tokens\n",
+        "- Warning: you must not reverse the padding, EOS and SOS tokens!"
       ]
     },
     {
