--- a/days/w1d1/resnet_template.ipynb
+++ b/days/w1d1/resnet_template.ipynb
@@ -451,6 +451,7 @@
     "def strided_matmul(a, b):\n",
     "    a0, a1 = a.shape\n",
     "    b0, b1 = b.shape\n",
+    "    assert a1 == b0\n",
     "\n",
     "    # Tip: a_strided and b_strided should have the same sizes\n",
     "    # Tip2: The matrix multiplication operation is a cubic operation (O(n**3))\n",
@@ -1681,11 +1682,8 @@
    "name": "BYO-ResNet-v1.ipynb",
    "provenance": []
   },
-  "interpreter": {
-   "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('mlab')",
+   "display_name": "Python 3.9.13 ('ML4G')",
    "language": "python",
    "name": "python3"
   },
@@ -1700,6 +1698,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
