harder policy gradient

--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -16,6 +16,7 @@
     "- Is policy gradient on-policy or off-policy?\n",
     "\n",
     "Read all the code, then:\n",
+    "- Complete the ... in the compute_loss function.\n",
     "- Use https://github.com/patrick-kidger/torchtyping to type the functions get_policy, get_action and compute_loss\n",
     "- Type completely the whole code.\n",
     "- Use from typeguard import typechecked and the @typechecked decorator to check the previous question.\n",
@@ -92,12 +93,12 @@
     "        return get_policy(obs).sample().item()\n",
     "\n",
     "    # make loss function whose gradient, for the right data, is policy gradient\n",
-    "    # What does the weights parameter represents here?\n",
     "    # What is the shape of obs?\n",
-    "    @typechecked # To be typed\n",
-    "    def compute_loss(obs, act, weights):\n",
+    "    @typechecked\n",
+    "    def compute_loss(obs: TensorType[\"b\", obs_dim], act: TensorType[\"b\"], weights: TensorType[\"b\"]):\n",
+    "        # Help: weights is a vector piecewise constant containing the total reward of each episode.\n",
     "        logp = get_policy(obs).log_prob(act)\n",
-    "        return -(logp * weights).mean()\n",
+    "        return ...\n",
     "\n",
     "    # make optimizer\n",
     "    optimizer = Adam(logits_net.parameters(), lr=lr)\n",
