add some information about the the cov matrix

--- a/days/w1d6/feature_vizu.ipynb
+++ b/days/w1d6/feature_vizu.ipynb
@@ -229,13 +229,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here, we decorate the colors of the image.\n",
+    "# Here, we decorrate the colors of the image.\n",
     "\n",
-    "# Read about cholewsky decomposition\n",
-    "# https://en.wikipedia.org/wiki/Whitening_transformation\n",
-    "# Why is it better to decorelate the colors of the image? \n",
+    "# Read https://en.wikipedia.org/wiki/Whitening_transformation\n",
+    "# Why is it better to decorrelate the colors of the image?\n",
     "\n",
-    "\n",
+    "# color correlation svd sqrt\n",
+    "# This matrix is obtained by calculating the correlation\n",
+    "# and then its sqrt by svd.\n",
+    "# Do not spend too much time on it, but for more information: https://github.com/tensorflow/lucid/blob/6dcc927e4ff4e7ef4d9c54d27b0352849dadd1bb/lucid/optvis/param/color.py#L24\n",
+    "# and: https://stackoverflow.com/questions/62289967/how-to-calculate-correlation-of-colours-in-a-dataset\n",
     "projection = torch.Tensor(\n",
     "    [[0.26, 0.09, 0.02],\n",
     "    [0.27, 0.00, -0.05],\n",
@@ -243,7 +246,6 @@
     ")\n",
     "\n",
     "# explain what is happenning in the torch.einsum?\n",
-    "# Can you spot some errors in the decorrImage code?\n",
     "\n",
     "class decorrImage(nn.Module):\n",
     "\n",
@@ -254,13 +256,12 @@
     "        self.use_sigmoid : bool = sigmoid\n",
     "    \n",
     "    def forward(self):\n",
-    "        image = torch.einsum('bchw, Cc -> bChw', self.image, projection)\n",
+    "        # the way to map back to normal colors is multiply the square root of your color correlations.\n",
+    "        image = torch.einsum('Cc, bchw -> bChw', projection, self.image)\n",
     "        if self.use_sigmoid:\n",
     "            return torch.sigmoid(image * self.scale + 0.5)\n",
     "        else:\n",
-    "            return torch.clip(image * self.scale + 0.5, min=0.0, max=1.0)\n",
-    "\n",
-    "# If you've spotted the errors, continue."
+    "            return torch.clip(image * self.scale + 0.5, min=0.0, max=1.0)\n"
    ]
   },
   {
@@ -610,11 +611,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5674577cfcb2919e9e23d4354f1a722805a54cfb33364ecebfeb18b6bf3b4ab2"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('automl3.10')",
+   "display_name": "Python 3.9.13 ('ML4G')",
    "language": "python",
    "name": "python3"
   },
@@ -628,7 +626,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+   }
   }
  },
  "nbformat": 4,
