--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -39,7 +39,6 @@
       },
       "source": [
         "\"\"\"\n",
-        "(Before beginning, you can Disable the GPU in Colab : Execution -> Modify execution -> choose cpu)\n",
         "Program:\n",
         "to be completed: \n",
         "- fast_gradient_sign_method: the implementation can be done in a few lines. This exercise shows the limits of Neural Networks. You can \"optimize\" an image, by making it differentiable on pytorch\n",
@@ -49,7 +48,6 @@
         "Implementation of a back door from scratch: You have to choose a small random patch (32*32 pixels), and optimize a neural network so that each time it sees this patch, it classifies the image towards a given target class. The back door should not affect the predictions on the images that do not contain the back door. Nice exercise, even if a bit difficult. You will learn how to use Dataloader and Datasets\n",
         "\n",
         "https://pytorch.org/tutorials/beginner/basics/data_tutorial.html\n",
-        "\n",
         "\"\"\"\n",
         "\n",
         "In this tutorial, we will discuss adversarial attacks on deep image classification models. As we have seen in many of the previous tutorials so far, Deep Neural Networks are a very powerful tool to recognize patterns in data, and, for example, perform image classification on a human-level. However, we have not tested yet how robust these models actually are. Can we \"trick\" the model and find failure modes? Can we design images that the networks naturally classify incorrectly? Due to the high classification accuracy on unseen test data, we would expect that this can be difficult. However, in 2014, a research group at Google and NYU showed that deep CNNs can be easily fooled, just by adding some salient but carefully constructed noise to the images. For instance, take a look at the example below (figure credit - [Goodfellow et al.](https://arxiv.org/pdf/1412.6572.pdf)):\n",
@@ -521,7 +519,6 @@
         "    fake_imgs (B C H W), noise_grads (B C H W)\n",
         "    \"\"\"\n",
         "    # Tip: You can use torch.gather to take the probability of the corresponding label of each image in parallel.\n",
-        "    # Tip : write the function for just one image before tring to parallelize for multiple images\n",
         "    ... # the 2 following lines just indicates the shape of what must be returned and  must be adapted\n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
         "    return fake_imgs, noise_grads"
@@ -576,7 +573,7 @@
       },
       "outputs": [],
       "source": [
-        "_ = eval_model(data_loader, img_func=lambda x, y: fast_gradient_sign_method(pretrained_model, x, y, epsilon=0.02)[0])"
+        "# _ = eval_model(data_loader, img_func=lambda x, y: fast_gradient_sign_method(pretrained_model, x, y, epsilon=0.02)[0])"
       ]
     },
     {
