Better vanilla policy gradient

--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -96,9 +96,9 @@
     "    # What is the shape of obs?\n",
     "    @typechecked\n",
     "    def compute_loss(obs: TensorType[\"b\", obs_dim], act: TensorType[\"b\"], weights: TensorType[\"b\"]):\n",
+    "        \"\"\"TODO\"\"\"\n",
     "        # Help: weights is a vector piecewise constant containing the total reward of each episode.\n",
-    "        logp = get_policy(obs).log_prob(act)\n",
-    "        return ...\n",
+    "        ...\n",
     "\n",
     "    # make optimizer\n",
     "    optimizer = Adam(logits_net.parameters(), lr=lr)\n",
@@ -204,7 +204,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Oct 13 2022, 16:12:19) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
