Change instrustions simple pg

--- a/days/w1d5/vanilla_policy_gradient.ipynb
+++ b/days/w1d5/vanilla_policy_gradient.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,9 +18,7 @@
     "\n",
     "Read all the code, then:\n",
     "- Complete the ... in the compute_loss function.\n",
-    "- Use https://github.com/patrick-kidger/torchtyping to type the functions get_policy, get_action and compute_loss\n",
-    "- Type completely the whole code.\n",
-    "- Use from typeguard import typechecked and the @typechecked decorator to check the previous question.\n",
+    "- Use https://github.com/patrick-kidger/torchtyping to type the functions get_policy, get_action. You can draw inspiration from the compute_loss function.\n",
     "- Answer the questions\n"
    ]
   },
