add a tip for numpy to pytorch

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -109,7 +109,8 @@
         "    c -= ...\n",
         "    d -= ...\n",
         "\n",
-        "print(f'Result: y = {a} + {b} x + {c} x^2 + {d} x^3')"
+        "print(f'Result: y = {a} + {b} x + {c} x^2 + {d} x^3')\n",
+        "# Tip: If if does not work, try to use .mean() instead of .sum()"
       ]
     },
     {
@@ -418,7 +419,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.13 ('ML4G')",
+      "display_name": "ML4GS",
       "language": "python",
       "name": "python3"
     },
@@ -432,12 +433,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.16 (main, Jan 11 2023, 10:02:19) \n[Clang 14.0.6 ]"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "92168008c1991bbe6f37c0a293534e68a58b2d6f9d0a850eaf02432aa4f31239"
+        "hash": "2976a061e207041c5ea034acf520ab7eefe3f1128fd85ff62a2d139d31ccd0fd"
       }
     }
   },
