--- a/mlab/w1d2_resnet_new.ipynb
+++ b/mlab/w1d2_resnet_new.ipynb
@@ -477,7 +477,11 @@
         "\n",
         "    Return: for each image, the index of the top prediction.\n",
         "    \"\"\"\n",
-        "    pass\n",
+        "    # Gotcha 1\n",
+        "\n",
+        "    # Gotcha 2\n",
+        "\n",
+        "    # Gotcha 3\n",
         "\n",
         "\n",
         "if MAIN and (not IS_CI):\n",
@@ -632,6 +636,30 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Convolutions\n",
+        "\n",
+        "Convolutions are one of the fundamental operations of signal processing. It can be interpreted as a sliding window (a \"kernel\") that goes over all positions of the input and outputs a weighted sum of the values of the region (i.e. the dot product of the kernel and the region). Watch this 30-second video: https://www.youtube.com/watch?v=ulKbLD6BRJA\n",
+        "\n",
+        "We're going to begin by implementing 1d convolutions without \"padding\" (when the kernel sticks off one side of the input). This means, unlike in the video, the output of the convolution will be a little smaller than the input. See the below image for examples:\n",
+        "\n",
+        "![alt text](https://github.com/EffiSciencesResearch/ML4G/blob/main/.images/1d_conv.jpeg?raw=true)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We will also implement 2d convolution, in which the kernel slides around on the input in 2d, producing one weighted sum in the output for each location it occupies:\n",
+        "\n",
+        "![alt text](https://github.com/EffiSciencesResearch/ML4G/blob/main/.images/2d_conv.png?raw=true)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "tp9bqNOOlqYy"
@@ -690,6 +718,22 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "A 1-d Convolution can be written as:\n",
+        "\n",
+        "$$\\operatorname{conv1d}(input, weights)[b, c_o, i] = \\sum_{c_i = 0}^{C_i} \\sum_{di = 0}^{k-1} weights[c_o, c_i, di] \\cdot input[b, c_i, i+di]$$\n",
+        "\n",
+        "A 2-d Convolution can be written as:\n",
+        "$$\\operatorname{conv2d}(input, weights)[b, c_o, i, j] = \\sum_{c_i = 0}^{C_i} \\sum_{di = 0}^{k_h-1}\\sum_{dj = 0}^{k_w-1} weights[c_o, c_i, di, dj] \\cdot input[b, c_i, i+di, j+dj]$$\n",
+        "\n",
+        "\n",
+        "Clarification on notation: the brackets on the LHS are indices into the output of the function, which (as you can see from the number of indices) is a rank-4 tensor: batch size, num of channels, width, height."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -697,12 +741,15 @@
       },
       "outputs": [],
       "source": [
+        "# Tip: print the shapes of the input, weights and expected and reason about the shapes, not the numbers.\n",
         "if MAIN:\n",
+        "    # Hint: From above, the \"weight\" arg should be shape (out_channels, in_channels, kernel_width)\n",
         "    input = t.tensor([[[1, 2, 3, 4]]])\n",
         "    fix_me = t.tensor([1, 3])\n",
         "    actual = torch_conv1d(input, fix_me)\n",
         "    expected = t.tensor([7.0, 11.0, 15.0])\n",
         "    utils.test_is_equal(actual, expected, \"w1d2_test.conv1d_a\")\n",
+        "# Bonus\n",
         "if MAIN:\n",
         "    fix_me = t.arange(12)\n",
         "    weights = t.tensor([[[1], [-1]]])\n",
@@ -944,7 +991,10 @@
         "\n",
         "\n",
         "if MAIN:\n",
-        "    w1d2_test.test_conv1d(conv1d)\n"
+        "    w1d2_test.test_conv1d(conv1d)\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -1112,7 +1162,11 @@
       },
       "outputs": [],
       "source": [
-        "\"TODO: YOUR CODE HERE\"\n",
+        "def extra_repr(module, arg_names: List[str], kwarg_names: List[str]) -> str:\n",
+        "    reprs = [repr(getattr(module, arg_name)) for arg_name in arg_names] + [\n",
+        "        f\"{k}={getattr(module, k)}\" for k in kwarg_names\n",
+        "    ]\n",
+        "    return \", \".join(reprs)\n",
         "\n",
         "\n",
         "class MaxPool2d(nn.Module):\n",
@@ -1125,6 +1179,7 @@
         "\n",
         "    def extra_repr(self) -> str:\n",
         "        \"\"\"Add additional information to the string representation of this class.\"\"\"\n",
+        "        # You can use the extra_repr function defined above.\n",
         "        pass\n",
         "\n",
         "\n",
@@ -1189,7 +1244,15 @@
         "        The fields should be named `weight` and `bias` for compatibility with PyTorch.\n",
         "        If `bias` is False, set `self.bias` to None.\n",
         "        \"\"\"\n",
-        "        pass\n",
+        "        self.in_features = in_features\n",
+        "        self.out_features = out_features\n",
+        "        super().__init__()\n",
+        "        bound = in_features**-0.5\n",
+        "        self.weight = nn.parameter.Parameter(t.empty(out_features, in_features).uniform_(-bound, bound))\n",
+        "        if bias:\n",
+        "            self.bias = nn.parameter.Parameter(t.empty(out_features).uniform_(-bound, bound))\n",
+        "        else:\n",
+        "            self.bias = None\n",
         "\n",
         "    def forward(self, x: t.Tensor) -> t.Tensor:\n",
         "        \"\"\"\n",
@@ -1305,6 +1368,7 @@
         "        \"\"\"Like nn.BatchNorm2d with track_running_stats=True and affine=True.\n",
         "\n",
         "        Name the learnable affine parameters `weight` and `bias` in that order.\n",
+        "        Warning: momentum is the oposite of the typical momentum. Read the documentation carefully.\n",
         "        \"\"\"\n",
         "        pass\n",
         "\n",
@@ -1990,8 +2054,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.9.16 (main, Jan 11 2023, 10:02:19) \n[Clang 14.0.6 ]"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.16"
     },
     "vscode": {
       "interpreter": {
